# fastapi_beanie_demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
src/: main.py
src/application/dto/: __init__.py  user_dto.py
src/application/services/: scene_service.py  user_service.py
src/domain/: __init__.py
src/domain/entities/: base.py  scenes.py  user.py
src/domain/value_objects/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: mongodb.py
src/infrastructure/repositories/: __init__.py
src/interfaces/: __init__.py
src/interfaces/api/: routers.py  scenes.py  users.py
