[tool.poetry]
name = "user-management"
version = "0.1.0"
description = "User Management API using FastAPI and MongoDB"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
beanie = "^1.20.0"
motor = "^3.1.1"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^0.19.0"
email-validator = "^2.0.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 